# BoolTrainer

./: docker-compose.yml
.github/workflows/: api_test.yml  general.yml
bt_api/: .env  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
bt_api/migrations/2021-05-23-162333_create_sessions/: down.sql  up.sql
bt_api/migrations/2021-05-26-215549_games/: up.sql
bt_api/migrations/2021-05-27-063451_rounds/: up.sql
bt_api/migrations/2021-05-27-064810_items/: up.sql
bt_api/migrations/2021-05-27-065424_variables/: up.sql
bt_api/src/: connection.rs  lib.rs  main.rs  router.rs  schema.rs
bt_api/src/app/: mod.rs
bt_api/src/app/action/: mod.rs  session.rs  tests.rs
bt_api/src/app/action/bool_expression/: expression.rs  generator.rs  mod.rs  tests.rs
bt_api/src/app/action/round/: answered.rs  generator.rs  mod.rs  results.rs
bt_api/src/app/core/bool_expression/: expression_option.rs  generator.rs  mod.rs  tests.rs
bt_api/src/app/handler/: mod.rs
bt_api/src/app/helper/: api_response.rs  jwt.rs  mod.rs
bt_api/src/app/helper/tests/: mod.rs
bt_api/src/app/model/: game.rs  item.rs  mod.rs  round.rs  session.rs  tests.rs  variable.rs
bt_api/tests/: request.rs
bt_front/: .env  .env.development  .env.production  Dockerfile  README.md  cypress.json  dev.Dockerfile  package-lock.json  package.json
bt_front/public/: index.html
bt_front/src/: main.js
bt_front/src/assets/: global.css
bt_front/src/components/: Item.vue  Round.vue  Variable.vue
bt_front/src/router/: index.js
bt_front/src/store/: index.js
bt_front/src/views/: Game.vue  Home.vue
(+5 files in other folders)
