[package]
name = "bt_api"
version = "0.1.0"
authors = ["theooiry <oirytheo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
r2d2-diesel = "1.0.0"
r2d2 = "0.8.9"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]