[package]
name = "bt_api"
version = "0.1.0"
authors = ["theooiry <oirytheo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
diesel = { version = "1.4.5", features = ["postgres", "uuidv07", "chrono"] }
dotenv = "0.15.0"
serde = {version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
r2d2-diesel = "1.0.0"
r2d2 = "0.8.9"
jsonwebtoken = "7"
rand = "0.8.3"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
chrono = "0.4.19"
diesel_migrations = "1.3"
rocket_cors = "0.5.2"

[dev-dependencies]
regex = "1.5.4"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]